edit fix param